--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+flask = "<3.1.0,>=3.0.0"
+gunicorn = "<21.3.0,>=21.2.0"
 
 [dev-packages]
 
 [requires]
-python_version = "3.9"
+python_version = "3.12"
